--- a/MyGames/MyGames.cbp
+++ b/MyGames/MyGames.cbp
@@ -12,7 +12,9 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-std=c++14" />
 					<Add option="-g" />
+					<Add directory="../SFML-2.5.1/include" />
 				</Compiler>
 				<Linker>
 					<Add library="sfml-graphics-d" />
@@ -20,6 +22,7 @@
 					<Add library="sfml-network-d" />
 					<Add library="sfml-window-d" />
 					<Add library="sfml-system-d" />
+					<Add directory="../SFML-2.5.1/lib" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -29,6 +32,8 @@
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
+					<Add option="-std=c++14" />
+					<Add directory="../SFML-2.5.1/include" />
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
@@ -37,6 +42,7 @@
 					<Add library="sfml-network" />
 					<Add library="sfml-window" />
 					<Add library="sfml-system" />
+					<Add directory="../SFML-2.5.1/lib" />
 				</Linker>
 			</Target>
 		</Build>
